tests/models/enum/named/usize/fail/min_length.rs
use dade::model;
#[model]
enum TestModel {
    Value(
       #[field(min_length = 2)]
        usize
    ),
}
fn main() {}
